# stopword-remover

./: README.md  pyproject.toml
stopword_remover/: __init__.py  core.py
